# sispubli-api

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  .vercelignore  AGENTS.md  Dockerfile  GEMINI.md  Makefile  README.md  api.py  logger.py  main.py  pyproject.toml  rate_limit.py  requirements.txt  scraper.py  security.py  validators.py  vercel.json
.agent/: AGENTS.md  ecc-install-state.json
.agent/skills/api-design/: SKILL.md
.agent/skills/architect/: SKILL.md
.agent/skills/backend-patterns/: SKILL.md
.agent/skills/code-reviewer/: SKILL.md
.agent/skills/coding-standards/: SKILL.md
.agent/skills/django-patterns/: SKILL.md
.agent/skills/django-tdd/: SKILL.md
.agent/skills/django-verification/: SKILL.md
.agent/skills/makefile-manager/: SKILL.md
.agent/skills/mcp-server-patterns/: SKILL.md
.agent/skills/planner/: SKILL.md
.agent/skills/python-patterns/: SKILL.md
.agent/skills/python-reviewer/: SKILL.md
.agent/skills/python-testing/: SKILL.md
.agent/skills/skill-creator/: SKILL.md
.agent/skills/tdd-guide/: SKILL.md
.agent/workflows/: docs.md  update-docs.md
.gemini/: GEMINI.md
.github/workflows/: ci.yml
docs/: API_CONTRACT.md  CACHE_POLITICA_SEGURANCA.md  LIMITS_VERCEL.md  SPEC_CONTRA_LOG_CPF.md  SPEC_TEST_TUNEL.md  Spec_feat_sec.md
scripts/: audit_pii.py  monitor_sispubli.py
src/: main.py
src/auth/: router.py  schemas.py
src/certificate_proxy/: constants.py  router.py  services.py  validators.py
src/certificates/: __init__.py  constants.py  parsers.py  router.py  schemas.py  scraper.py  utils.py
src/core/: config.py  logger.py  schemas.py  security.py  validators.py
tests/: __init__.py  conftest.py  mock_sispubli.html  test_api.py  test_audit_pii.py  test_auth.py  test_cache_policies.py  test_fail_fast.py  test_favicon.py  test_integration.py  test_listagem.py  test_logger.py  test_rate_limit.py  test_scraper.py  test_scraper_sanity.py  test_security.py  test_ssrf.py  test_tunnel.py  test_tunnel_e2e.py  test_validators.py
tests/auth/: conftest.py
tests/certificate_proxy/: conftest.py
tests/core/unit/: test_logger.py  (+4 more)
tests/e2e/: __init__.py  conftest.py  test_sispubli_real.py  test_tunnel_real.py
tests/resources/: docs do certificado.har  mock_sispubli.html  other do certificado.har
(+11 files in other folders)
